# SiriusObfuscator

./: .gitignore  .gitlab-ci.yml  Package.resolved  Package.swift  README.md
Documentation/: BuildNotes.md  GettingStarted.md
FileExtractor/: .gitignore  .gitlab-ci.yml  Gemfile  Package.swift  README.md  Rakefile
FileExtractor/Documentation/: GettingStarted.md  ImportantTopics.md
FileExtractor/Scripts/: build.sh  run_all_tests.sh  setup_environment.sh
FileExtractor/lib/: file-extractor.rb
FileExtractor/packaging/: .gitignore  Package.swift
FileExtractor/spec/: sample_spec.rb  spec_helper.rb
NameMapper/: README.md
NameMapper/Scripts/: build.sh
Scripts/: build.sh  deploy_build_artifacts.sh  git_remotes.sh  git_update.sh
Sources/ObfuscatorTool/: ObfuscatorTool.swift  main.swift
Sources/Sirius/: Sirius.swift  main.swift
SymbolExtractorAndRenamer/: .arcconfig  .gitignore  .gitlab-ci.yml  Doxyfile  README.md
SymbolExtractorAndRenamer/Documentation/: ASTGuide.md  BitcodeAndSymbols-ImportantTopics.md  ConfigurationFile.md  Constructors.md  DocumentationFormat.md  GettingStarted.md  IntegrationTesting.md  NameMapper-ImportantTopics.md  ToDescribe.md  (+4 more)
SymbolExtractorAndRenamer/swift/unittests/SwiftObfuscation/: CMakeLists.txt  DataStructuresDeserializationTests.cpp  DataStructuresOperatorsTests.cpp  DataStructuresSerializationTests.cpp  FileIOTests.cpp  RandomTests.cpp  SwiftObfuscationTests.cpp
TestProjects/: .gitignore  README.md
Tests/: LinuxMain.swift
VerificationSuite/: .gitignore  .gitlab-ci.yml  Package.resolved  Package.swift  README.md
(+832 files in other folders)
